--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html id="root" lang="en">
+<!-- 문제 생기면 전화주세용 010-2922-2661 -->
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title><%= htmlWebpackPlugin.options.title %></title>
-    
+
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
 </head>
+
 <body>
 <noscript>
-    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
-        Please enable it to continue.</strong>
+    <strong>자바스크립트 켜주세요 ㅜㅜ</strong>
 </noscript>
 <div id="app"></div>
 <!-- built files will be auto injected -->
 </body>
+
 </html>
