--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html id="root" lang="en">
 <!-- 문제 생기면 전화주세용 010-2922-2661 -->
 
+<base href="/" />
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
